--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,6 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-.sign-up {
-  background-image: url(./assets/signup-bg.png);
-  background-position: center;
-  background-size: cover;
-}
-
-.login {
-  background-image: url(./assets/login-bg.png);
-  background-position: center;
-  background-size: cover;
+.font-hello {
+  font-family: "Bebas Neue", serif;
 }
